Add evernote package

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,6 +5,7 @@
 	"types": "./src/index.ts",
 	"license": "MIT",
 	"scripts": {
+		"clean": "rm -rf node_modules",
 		"lint": "eslint *.ts*"
 	},
 	"dependencies": {
