--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,25 +1,21 @@
 {
-	"name": "@erss/db",
+	"name": "@erss/auth",
 	"version": "0.1.0",
 	"main": "./index.ts",
 	"types": "./index.ts",
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf node_modules",
-		"db:generate": "pnpm with-env prisma generate",
-		"db:push": "pnpm with-env prisma db push --skip-generate",
-		"dev": "pnpm with-env prisma studio --port 5556",
-		"with-env": "dotenv -e ../../.env --",
 		"lint": "eslint *.ts*"
 	},
 	"dependencies": {
-		"@prisma/client": "^4.15.0",
+		"@clerk/nextjs": "^4.21.9",
 		"@t3-oss/env-nextjs": "^0.3.1",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"dotenv-cli": "^7.2.1",
-		"prisma": "^4.15.0",
+		"prisma": "^4.16.1",
 		"typescript": "^5.1.3"
 	}
 }
