--- a/packages/evernote/package.json
+++ b/packages/evernote/package.json
@@ -1,20 +1,17 @@
 {
-	"name": "@erss/db",
+	"name": "@erss/evernote",
 	"version": "0.1.0",
 	"main": "./index.ts",
 	"types": "./index.ts",
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf node_modules",
-		"db:generate": "pnpm with-env prisma generate",
-		"db:push": "pnpm with-env prisma db push --skip-generate",
-		"dev": "pnpm with-env prisma studio --port 5556",
-		"with-env": "dotenv -e ../../.env --",
 		"lint": "eslint *.ts*"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.15.0",
 		"@t3-oss/env-nextjs": "^0.3.1",
+		"evernote": "^2.0.5",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
