--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,7 +10,8 @@
 		"db:push": "pnpm with-env prisma db push --skip-generate",
 		"dev": "pnpm with-env prisma studio --port 5556",
 		"with-env": "dotenv -e ../../.env --",
-		"lint": "eslint *.ts*"
+		"lint": "eslint *.ts*",
+		"postinstall": "db:generate"
 	},
 	"dependencies": {
 		"@prisma/client": "^5.0.0",
