--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.0.0",
     "@types/eslint": "^8.44.1",
     "@types/node": "^20.4.5",
     "@types/prettier": "^2.7.3",
