--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -9,20 +9,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.0",
     "@trpc/client": "^10.35.0",
     "@trpc/next": "^10.35.0",
     "@trpc/react-query": "^10.35.0",
     "@trpc/server": "^10.35.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.263.1",
+    "micro": "^10.0.1",
     "next": "^13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.0.0",
     "@types/eslint": "^8.44.1",
+    "@types/micro": "^10.0.0",
     "@types/node": "^20.4.5",
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.16",
