--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "@erss/auth",
 	"version": "0.1.0",
-	"main": "./index.ts",
-	"types": "./index.ts",
+	"main": "./server.ts",
+	"types": "./server.ts",
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf node_modules",
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@clerk/nextjs": "^4.23.1",
 		"@t3-oss/env-nextjs": "^0.6.0",
+		"svix": "^1.7.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
