--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@erss/evernote",
+	"name": "@erss/service",
 	"version": "0.1.0",
 	"main": "./index.ts",
 	"types": "./index.ts",
@@ -9,15 +9,13 @@
 		"lint": "eslint *.ts*"
 	},
 	"dependencies": {
-		"@prisma/client": "^4.15.0",
-		"@t3-oss/env-nextjs": "^0.3.1",
-		"evernote": "^2.0.5",
+		"@clerk/nextjs": "^4.23.1",
+		"@t3-oss/env-nextjs": "^0.6.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@types/evernote": "^2.0.2",
 		"dotenv-cli": "^7.2.1",
-		"prisma": "^4.15.0",
-		"typescript": "^5.1.3"
+		"prisma": "^5.0.0",
+		"typescript": "^5.1.6"
 	}
 }
